--- a/src/app/products-list/product-details.component.html
+++ b/src/app/products-list/product-details.component.html
@@ -2,6 +2,27 @@
   <div class="card-header">
     {{pageTitle + ': ' + product?.productName}}
   </div>
+  <div class="card-body">
+      <div class="keys">
+        <p>Name:</p>
+        <p>Code:</p>
+        <p>Description:</p>
+        <p>Availability:</p>
+        <p>Price:</p>
+        <p>5 Star Rating</p>
+      </div>
+      <div class="values">
+        <p>{{product?.productName}}</p>
+        <p>{{product?.productCode | lowercase | convertToSpaces: '-'}}</p>
+        <p>{{product?.description}}</p>
+        <p>{{product?.releaseDate}}</p>
+        <p>{{product?.price | currency: 'USD' : 'symbol' : '1.2-2'}}</p>
+        <p><pm-star [rating]='product.starRating' (ratingClicked)='onRatingClicked($event)'></pm-star></p>
+      </div>
+      <div class="img-container">
+        <img [src]='product.imageUrl' [title]='product.productName' alt="Image">
+      </div>
+  </div>
   <div class="card-footer">
     <button class="btn btn-outline-secondary" (click)='onBack()' style="width: 80px">
       <i class="fa fa-chevron-left"></i> Back
