--- a/src/app/products-list/product-details.component.html
+++ b/src/app/products-list/product-details.component.html
@@ -24,7 +24,7 @@
       </div>
   </div>
   <div class="card-footer">
-    <button class="btn btn-outline-secondary" (click)='onBack()' style="width: 80px">
+    <button mat-raised-button color="primary" class="btn btn-outline-secondary" (click)='onBack()' style="width: 80px">
       <i class="fa fa-chevron-left"></i> Back
     </button>
   </div>
