--- a/src/app/customer/customer.component.html
+++ b/src/app/customer/customer.component.html
@@ -50,7 +50,8 @@
         </div>
       </div>
 
-      <div class="form-group row mb-2">
+      <div formGroupName="emailGroup">
+        <div class="form-group row mb-2">
         <label class="col-md-2 col-form-label"
                for="emailId">Email</label>
         <div class="col-md-8">
@@ -59,15 +60,35 @@
                  type="email"
                  placeholder="Email (required)"
                  formControlName="email"
-                 [ngClass]="{'is-invalid': (customerForm.get('email').touched || customerForm.get('email').dirty) && !customerForm.get('email').valid }" />
+                 [ngClass]="{'is-invalid': emailMessage }" />
           <span class="invalid-feedback">
-            <span *ngIf="customerForm.get('email').errors?.required">
+            {{ emailMessage }}
+          </span>
+        </div>
+        </div>
+
+        <div class="form-group row mb-2">
+        <label class="col-md-2 col-form-label"
+               for="confirmEmailId">Confirm Email</label>
+        <div class="col-md-8">
+          <input class="form-control"
+                 id="emailId"
+                 type="email"
+                 placeholder="Confirm Email (required)"
+                 formControlName="confirmEmail"
+                 [ngClass]="{'is-invalid': customerForm.get('emailGroup').errors || 
+                                          ((customerForm.get('emailGroup.confirmEmail').touched || 
+                                          customerForm.get('emailGroup.confirmEmail').dirty) && 
+                                          !customerForm.get('emailGroup.confirmEmail').valid )}" />
+          <span class="invalid-feedback">
+            <span *ngIf="customerForm.get('emailGroup.confirmEmail').errors?.required">
               Please enter your email address.
             </span>
-            <span *ngIf="customerForm.get('email').errors?.email">
-              Please enter a valid email address.
+            <span *ngIf="customerForm.get('emailGroup').errors?.match">
+              The confirmation does not match the email address.
             </span>
           </span>
+        </div>
         </div>
       </div>
 
@@ -94,12 +115,12 @@
         <div class="col-md-8">
           <div class="form-check form-check-inline">
             <label class="form-check-label">
-              <input type="radio" value="email" class="form-check-input" formControlName="notification" (click)="setNotification('email')"> Email
+              <input type="radio" value="email" class="form-check-input" formControlName="notification"> Email
             </label>
           </div>
           <div class="form-check form-check-inline">
             <label class="form-check-label">
-              <input type="radio" value="text" class="form-check-input" formControlName="notification" (click)="setNotification('text')"> Text
+              <input type="radio" value="text" class="form-check-input" formControlName="notification"> Text
             </label>
           </div>
         </div>
@@ -122,7 +143,6 @@
         </div>
       </div>
 
-
       <div class="form-group row mb-2">
         <div class="col-md-8">
           <div class="form-check">
@@ -136,109 +156,115 @@
         </div>
       </div>
 
-      <!-- <div *ngIf="customer.sendCatalog">
-        <div class="form-group row mb-2">
-          <label class="col-md-2 col-form-label pt-0">Address Type</label>
-          <div class="col-md-8">
-            <div class="form-check form-check-inline">
-              <label class="form-check-label">
-                <input class="form-check-input"
-                       id="addressType1Id"
-                       type="radio"
-                       value="home"
-                       [(ngModel)]="customer.addressType"
-                       name="addressType"> Home
-              </label>
-            </div>
-            <div class="form-check form-check-inline">
-              <label class="form-check-label">
-                <input class="form-check-input"
-                       id="addressType1Id"
-                       type="radio"
-                       value="work"
-                       [(ngModel)]="customer.addressType"
-                       name="addressType"> Work
-              </label>
-            </div>
-            <div class="form-check form-check-inline">
-              <label class="form-check-label">
-                <input class="form-check-input"
-                       id="addressType1Id"
-                       type="radio"
-                       value="other"
-                       [(ngModel)]="customer.addressType"
-                       name="addressType"> Other
-              </label>
-            </div>
-          </div>
-        </div>
 
-        <div class="form-group row mb-2">
-          <label class="col-md-2 col-form-label"
-                 for="street1Id">Street Address 1</label>
-          <div class="col-md-8">
-            <input class="form-control"
-                   id="street1Id"
-                   type="text"
-                   placeholder="Street address"
-                   [(ngModel)]="customer.street1"
-                   name="street1">
-          </div>
-        </div>
 
-        <div class="form-group row mb-2">
-          <label class="col-md-2 col-form-label"
-                 for="street2Id">Street Address 2</label>
-          <div class="col-md-8">
-            <input class="form-control"
-                   id="street2Id"
-                   type="text"
-                   placeholder="Street address (second line)"
-                   [(ngModel)]="customer.street2"
-                   name="street2">
-          </div>
-        </div>
+      <div *ngIf="customerForm.get('sendCatalog').value">
+        <div formArrayName="addresses" *ngFor="let address of addresses.controls; let i=index">
+          <div [formGroupName]="i">
+            <div class="form-group row mb-2">
+              <label class="col-md-2 col-form-label pt-0">Address Type</label>
+              <div class="col-md-8">
+                <div class="form-check form-check-inline">
+                  <label class="form-check-label">
+                    <input class="form-check-input"
+                           id="addressType1Id"
+                           type="radio"
+                           value="home"
+                           name="addressType"> Home
+                  </label>
+                </div>
+                <div class="form-check form-check-inline">
+                  <label class="form-check-label">
+                    <input class="form-check-input"
+                           id="addressType1Id"
+                           type="radio"
+                           value="work"
+                           name="addressType"> Work
+                  </label>
+                </div>
+                <div class="form-check form-check-inline">
+                  <label class="form-check-label">
+                    <input class="form-check-input"
+                           id="addressType1Id"
+                           type="radio"
+                           value="other"
+                           name="addressType"> Other
+                  </label>
+                </div>
+              </div>
+            </div>
 
-        <div class="form-group row mb-2">
-          <label class="col-md-2 col-form-label"
-                 for="cityId">City, State, Zip Code</label>
-          <div class="col-md-3">
-            <input class="form-control"
-                   id="cityId"
-                   type="text"
-                   placeholder="City"
-                   [(ngModel)]="customer.city"
-                   name="city">
-          </div>
-          <div class="col-md-3">
-            <select class="form-control"
-                    id="stateId"
-                    [(ngModel)]="customer.state"
-                    name="state">
-              <option value=""
-                      disabled
-                      selected
-                      hidden>Select a State...</option>
-              <option value="AL">Alabama</option>
-              <option value="AK">Alaska</option>
-              <option value="AZ">Arizona</option>
-              <option value="AR">Arkansas</option>
-              <option value="CA">California</option>
-              <option value="CO">Colorado</option>
-              <option value="WI">Wisconsin</option>
-              <option value="WY">Wyoming</option>
-            </select>
-          </div>
-          <div class="col-md-2">
-            <input class="form-control"
-                   id="zipId"
-                   type="number"
-                   placeholder="Zip Code"
-                   [(ngModel)]="customer.zip"
-                   name="zip">
+            <div class="form-group row mb-2">
+              <label class="col-md-2 col-form-label"
+                     attr.for="{{'street1Id' + i}}">Street Address 1</label>
+              <div class="col-md-8">
+                <input class="form-control"
+                       id="{{'street1Id' + i}}"
+                       type="text"
+                       placeholder="Street address"
+                       name="street1">
+              </div>
+            </div>
+
+            <div class="form-group row mb-2">
+              <label class="col-md-2 col-form-label"
+                     attr.for="{{'street2Id' + i}}">Street Address 2</label>
+              <div class="col-md-8">
+                <input class="form-control"
+                       id="{{'street2Id' + i}}"
+                       type="text"
+                       placeholder="Street address (second line)"
+                       name="street2">
+              </div>
+            </div>
+
+            <div class="form-group row mb-2">
+              <label class="col-md-2 col-form-label"
+                     attr.for="{{'cityId' + i}}">City, State, Zip Code</label>
+              <div class="col-md-3">
+                <input class="form-control"
+                       id="{{'cityId' + i}}"
+                       type="text"
+                       placeholder="City"
+                       name="city">
+              </div>
+              <div class="col-md-3">
+                <select class="form-control"
+                        id="{{'stateId' + i}}"
+                        name="state">
+                  <option value=""
+                          disabled
+                          selected
+                          hidden>Select a State...</option>
+                  <option value="AL">Alabama</option>
+                  <option value="AK">Alaska</option>
+                  <option value="AZ">Arizona</option>
+                  <option value="AR">Arkansas</option>
+                  <option value="CA">California</option>
+                  <option value="CO">Colorado</option>
+                  <option value="WI">Wisconsin</option>
+                  <option value="WY">Wyoming</option>
+                </select>
+              </div>
+              <div class="col-md-2">
+                <input class="form-control"
+                       id="{{'zipId' + i}}"
+                       type="number"
+                       placeholder="Zip Code"
+                       name="zip">
+              </div>
+            </div>
           </div>
         </div>
-      </div> -->
+        <button class="btn btn-outline-primary"
+                type="button"
+                [disabled]="!addresses.valid"
+                (click)="addAddress()">
+        Add Another Address
+        </button>
+      </div>
+
+
 
       <div class="form-group row mb-2">
         <div class="offset-md-2 col-md-4">
@@ -263,3 +289,5 @@
 <br>Touched: {{ customerForm.touched }}
 <br>Valid: {{ customerForm.valid }}
 <br>Value: {{ customerForm.value | json }}
+<br>Street: {{ addresses.get('0.street1')?.value}}
+<br>&nbsp;
