--- a/src/app/products-list/products-list.component.html
+++ b/src/app/products-list/products-list.component.html
@@ -45,6 +45,12 @@
         <td>
           <pm-star [rating]='product.starRating' (ratingClicked)='onRatingClicked($event)'></pm-star>
         </td>
+        <td>
+          <button class="btn btn-outline-primary btn-sm"
+                  [routerLink]="['/products', product.productId, 'edit']">
+            Edit
+          </button>
+        </td>
       </tr>
     </tbody>
   </table>
