--- a/src/app/products-list/product-details.component.html
+++ b/src/app/products-list/product-details.component.html
@@ -18,14 +18,20 @@
         <p>{{product?.releaseDate}}</p>
         <p>{{product?.price | currency: 'USD' : 'symbol' : '1.2-2'}}</p>
         <p><pm-star [rating]='product.starRating' (ratingClicked)='onRatingClicked($event)'></pm-star></p>
+
       </div>
       <div class="img-container">
         <img [src]='product.imageUrl' [title]='product.productName' alt="Image">
       </div>
   </div>
   <div class="card-footer">
-    <button mat-raised-button color="primary" class="btn btn-outline-secondary" (click)='onBack()' style="width: 80px">
+    <button class="btn btn-outline-secondary mr-3" (click)='onBack()' style="width: 80px">
       <i class="fa fa-chevron-left"></i> Back
+    </button>
+    <button class="btn btn-outline-primary"
+            style="width: 80px"
+            [routerLink]="['/products', product.productId, 'edit']">
+      Edit
     </button>
   </div>
 </div>
