--- a/src/app/product-edit/product-edit.component.html
+++ b/src/app/product-edit/product-edit.component.html
@@ -52,18 +52,29 @@
         </div>
       </div>
 
-      <div class="form-group row mb-2">
-        <label for="tagId" class="col-md-2 col-form-label">Tag</label>
-        <div class="col-md-8">
-          <input  class="form-control"
-                  type="text"
-                  id="tagId"
-                  placeholder="Tag"
-                  formControlName="tag"/>
+      <div formArrayName="tags" >
+          <div class="form-group row mb-2" *ngFor="let tag of tags.controls; let i=index">
+            <label [attr.for]="i" class="col-md-2 col-form-label">Tag</label>
+            <div class="col-md-8">
+              <input  class="form-control"
+                      type="text"
+                      [id]="i"
+                      placeholder="Tag"
+                      [formControlName]="i"/>
+              </div>
           </div>
       </div>
 
-      <button class="btn btn-outline-secondary">Add Tag</button>
+      <div class="row">
+        <div class="col-md-1 mb-">
+          <button class="btn btn-outline-secondary"
+                  type="button"
+                  title="Add a search tag"
+                  (click)="addTag()">
+                  Add Tag
+          </button>
+        </div>
+      </div>
 
       <div class="form-group row mb-2">
         <label for="descriptionId" class="col-md-2 col-form-label">Description</label>
@@ -82,8 +93,8 @@
             <button class="btn btn-primary mr-3"
                     type="submit"
                     style="width:80px"
-                    [title]="customerForm.valid ? 'Save your entered data' : 'Disabled until the form data is valid'"
-                    [disabled]="!customerForm.valid">
+                    [title]="editForm.valid ? 'Save your entered data' : 'Disabled until the form data is valid'"
+                    [disabled]="!editForm.valid">
               Save
             </button>
             <button class="btn btn-outline-secondary mr-3"
