--- a/src/app/product-edit/product-edit.component.html
+++ b/src/app/product-edit/product-edit.component.html
@@ -1,11 +1,11 @@
 <div class="card">
   <div class="card-header">
-    Edit Product: {{product?.productName}}
+    {{pageTitle}}
   </div>
 
   <div class="card-body">
     <form novalidate
-          (ngSubmit)="save()"
+          (ngSubmit)="saveProduct()"
           [formGroup]="editForm">
     
       <div class="form-group row mb-2">
@@ -102,7 +102,8 @@
               Cancel
             </button>
             <button class="btn btn-outline-danger mr-3"
-                    type="button">
+                    type="button"
+                    (click)="deleteProduct()">
               Delete
             </button>
         </div>
