--- a/src/app/products-list/products-list.component.html
+++ b/src/app/products-list/products-list.component.html
@@ -37,7 +37,7 @@
           <img *ngIf='showImage' [src]='product.imageUrl' [title]='product.productName' [style.width.px]='imageWidth' [style.margin.px]='imageMargin' alt="Image">
         </td>
         <td>
-          <a [routerLink]="['/products', product.productId]">{{product.productName}}</a>
+          <a [routerLink]="['/products', product.id]">{{product.productName}}</a>
         </td>
         <td>{{product.productCode | lowercase | convertToSpaces: '-'}}</td>
         <td>{{product.releaseDate}}</td>
@@ -47,7 +47,7 @@
         </td>
         <td>
           <button class="btn btn-outline-primary btn-sm"
-                  [routerLink]="['/products', product.productId, 'edit']">
+                  [routerLink]="['/products', product.id, 'edit']">
             Edit
           </button>
         </td>
