--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,8 +3,10 @@
   <ul class="nav nav-pills">
     <li><a class="nav-link" routerLinkActive='active' [routerLinkActiveOptions]="{exact: true}" [routerLink]="['/welcome']">Home</a></li>
     <li><a class="nav-link" routerLinkActive='active' [routerLinkActiveOptions]="{exact: true}" [routerLink]="['/products']">Product List</a></li>
+    <li><a class="nav-link" routerLinkActive='active' [routerLinkActiveOptions]="{exact: true}" [routerLink]="['/user']">User List</a></li>
     <!-- <li><a class="nav-link" [routerLink]="['/edit']">Edit</a></li> -->
     <li><a class="nav-link" routerLinkActive='active' [routerLinkActiveOptions]="{exact: true}" [routerLink]="['/products/0/edit']">Add Product</a></li>
+    
     <li><a class="nav-link" routerLinkActive='active' [routerLinkActiveOptions]="{exact: true}" [routerLink]="['/customer']">Customer</a></li>
   </ul>
 </nav>
