--- a/src/app/user/user.component.sass
+++ b/src/app/user/user.component.sass
@@ -23,4 +23,8 @@
                     width: 40px
                 h2
                     text-transform: uppercase
+                .hobby
+                    font-size: 30px
+                    margin-right: 10px
+                     
                 
