--- a/src/app/user/user-edit.component.html
+++ b/src/app/user/user-edit.component.html
@@ -6,8 +6,8 @@
 
   <div class="card-body">
     <form novalidate
-          (ngSubmit)="save()"
-          [formGroup]="userEditForm">
+          [formGroup]="userEditForm"
+          (ngSubmit)="saveUser()">
 
       <div class="form-group row mb-2">
         <label for="userNameId"
@@ -17,7 +17,7 @@
                 class="form-control"
                 id="userNameId"
                 placeholder="User Name"
-                formControlname="userName"
+                formControlName="userName"
                 [ngClass]="{'is-invalid': (userEditForm.get('userName').touched || userEditForm.get('userName').dirty) && !userEditForm.get('userName').valid}" />
         </div>
       </div>
@@ -28,12 +28,47 @@
                   class="form-control"
                   id="userSecondNameId"
                   placeholder="User Second Name"
-                  formControlname="userSecondName"
+                  formControlName="userSecondName"
                   [ngClass]="{'is-invalid': (userEditForm.get('userSecondName').touched || userEditForm.get('userSecondName').dirty) && !userEditForm.get('userSecondName').valid}"/>
             <span class="invalid-feedback">
             </span>
           </div>
         </div>
+
+      <div class="form-group row mb-2">
+        <label for="userEmailId" class="col-form-label col-md-2">Email</label>
+        <div class="col-md-8">
+          <input type="text"
+                class="form-control"
+                id="userEmailId"
+                placeholder="email@example.com"
+                formControlName="userEmail"
+                [ngClass]="{'is-invalid': (userEditForm.get('userEmail').touched || userEditForm.get('userEmail').dirty) && !userEditForm.get('userEmail').valid}">
+        </div>
+      </div>
+
+      <div class="form-group row mb-2">
+        <label for="userPhoneId" class="col-form-label col-md-2">Phone</label>
+        <div class="col-md-8">
+          <input type="text"
+                class="form-control"
+                id="userPhoneId"
+                placeholder="380680067779"
+                formControlName="userPhone"
+                [ngClass]="{'is-invalid': (userEditForm.get('userPhone').touched || userEditForm.get('userPhone').dirty) && !userEditForm.get('userPhone').valid}">
+        </div>
+      </div>
+
+      <div class="form-group row mb-2">
+        <label for="userBirthdayId" class="col-form-label col-md-2">Birthday</label>
+        <div class="col-md-8">
+          <input type="number"
+                class="form-control col-md-3"
+                id="userBirthdayId"
+                placeholder="DD"
+                formControlName="userBDay">
+        </div>
+      </div>
 
 
       <div class="form-group row mb-2">
